<resources>
    <string name="app_name">PRM_Assignment</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="remember_login">Remember login</string>
    <string name="sign_up_new_account">Sign up new account</string>
    <string name="full_name">Full name</string>
    <string name="confirm_password">Confirm password</string>
    <string name="create_new_account">Create new account</string>
    <string name="todo">TODO</string>
    <string name="sign_up">Sign up</string>
    <string name="already_have_account_sign_in">Already have account ? Sign in</string>
    <string name="shopping_cart">Shopping Cart</string>
    <string name="logout">Log out</string>
    <string name="search">Search</string>
    <string name="available_categories">Available categories</string>
    <string name="welcome_to_our_shop">Welcome to our shop</string>
    <string name="your_cart_content">Your cart content</string>
    <string name="place_order">Place order</string>
    <string name="product_name">Product name</string>
    <string name="price">Price</string>
    <string name="quantity">Quantity</string>
    <string name="change_quantity">Change quantity</string>
    <string name="remove">Remove</string>
    <string name="update">Update</string>
    <string name="enter_quantity">Enter quantity</string>
    <string name="add_to_cart">Add to cart</string>
    <string name="available_products">Available products</string>
    <string name="back">Back</string>
    <string name="products">Products</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="location">Location</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="products_in_your_order">Products in your order</string>
    <string name="review_your_order">Review your order</string>
    <string name="address">Address</string>
    <string name="phone">Phone</string>
    <string name="payment_method">Payment method</string>
    <string name="credit_card">Credit Card</string>
    <string name="cash_on_delivery">Cash on delivery</string>
    <string name="order">Order</string>
    <string name="forget_password">Forget password</string>
    <string name="reset_password">Reset password</string>
    <string name="back_to_login">Back to login</string>
    <string name="store_location">Store location</string>
</resources>