<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <TextView
            android:id="@+id/txtSignIn"
            android:layout_width="314dp"
            android:layout_height="43dp"
            android:textSize="22sp"
            android:textAlignment="center"
            android:text="@string/already_have_account_sign_in"
            app:layout_constraintTop_toBottomOf="@+id/btnSignUp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="16dp"
    />
    <Button
            android:text="@string/sign_up"
            android:layout_width="162dp"
            android:layout_height="51dp"
            android:id="@+id/btnSignUp"
            app:layout_constraintTop_toBottomOf="@+id/txtConfirmPasswordSignUp"
            android:layout_marginTop="20dp" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"/>
    <ImageView
            android:layout_width="261dp"
            android:layout_height="157dp" app:srcCompat="@drawable/_5279963_p0"
            android:id="@+id/imageView2"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="16dp" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
    />
    <EditText
            android:layout_width="312dp"
            android:layout_height="43dp"
            android:inputType="textPersonName"
            android:hint="@string/full_name"
            android:ems="10"
            android:id="@+id/txtFullNameSignUp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView"
            android:layout_marginTop="16dp"/>
    <EditText
            android:layout_width="312dp"
            android:layout_height="43dp"
            android:inputType="textPersonName"
            android:hint="@string/username"
            android:ems="10"
            android:id="@+id/txtUsernameSignUp"
            app:layout_constraintTop_toBottomOf="@+id/txtFullNameSignUp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="16dp"
    />
    <EditText
            android:layout_width="312dp"
            android:layout_height="43dp"
            android:inputType="textPassword"
            android:hint="@string/password"
            android:ems="10"
            android:id="@+id/txtPasswordSignUp"
            app:layout_constraintTop_toBottomOf="@+id/txtUsernameSignUp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="16dp"/>
    <EditText
            android:layout_width="312dp"
            android:layout_height="43dp"
            android:inputType="textPassword"
            android:hint="@string/confirm_password"
            android:ems="10"
            android:id="@+id/txtConfirmPasswordSignUp"
            app:layout_constraintTop_toBottomOf="@+id/txtPasswordSignUp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="16dp"/>
    <TextView
            android:text="@string/create_new_account"
            android:textSize="26sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView"
            app:layout_constraintTop_toBottomOf="@+id/imageView2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="16dp"/>
</androidx.constraintlayout.widget.ConstraintLayout>