<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".Login">

    <TextView
            android:id="@+id/txtSignup"
            android:layout_width="226dp"
            android:layout_height="31dp"
            android:textSize="22sp"
            android:textAlignment="center"
            android:text="@string/sign_up_new_account"
            app:layout_constraintTop_toBottomOf="@+id/btnLogin"
            android:layout_marginTop="24dp" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintHorizontal_bias="0.497"/>
    <ImageView
            android:layout_width="312dp"
            android:layout_height="173dp"
            app:srcCompat="@drawable/a"
            android:id="@+id/imageView"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="28dp" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:contentDescription="@string/todo"/>
    <TextView
            android:text="@string/login"
            android:textSize="22sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/txtLoginLabel"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintHorizontal_bias="0.498" app:layout_constraintTop_toBottomOf="@+id/imageView"
            android:layout_marginTop="16dp"/>
    <EditText
            android:layout_width="315dp"
            android:layout_height="45dp"
            android:inputType="textPersonName"
            android:hint="@string/username"
            android:maxLength="50"
            android:ems="10"
            android:id="@+id/txtUsername"
            app:layout_constraintTop_toBottomOf="@+id/txtLoginLabel"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="20dp"
            app:layout_constraintHorizontal_bias="0.489"/>
    <EditText
            android:layout_width="315dp"
            android:layout_height="45dp"
            android:inputType="textPassword"
            android:hint="@string/password"
            android:maxLength="50"
            android:ems="10"
            android:id="@+id/txtPassword"
            app:layout_constraintTop_toBottomOf="@+id/txtUsername"
            android:layout_marginTop="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"/>
    <Button
            android:text="@string/login"
            android:layout_width="162dp"
            android:layout_height="51dp"
            android:id="@+id/btnLogin"
            app:layout_constraintTop_toBottomOf="@+id/ckRemember"
            android:layout_marginTop="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
    />
    <CheckBox
            android:text="@string/remember_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/ckRemember"
            app:layout_constraintTop_toBottomOf="@+id/txtPassword"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="20dp"/>
</androidx.constraintlayout.widget.ConstraintLayout>