<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="horizontal" android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:layout_marginRight="14dp"
              android:layout_marginLeft="14dp"
              android:padding="5dp"
              android:id="@+id/row_product_test">

    <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="center_vertical">

        <TextView
                android:id="@+id/txtProductNames"
                android:layout_width="220dp"
                android:layout_height="wrap_content"
                android:text="@string/product_name"
                android:textColor="@color/black"
                android:textSize="17sp"
                android:textStyle="bold"/>

        <TextView
                android:id="@+id/txtProductPrices"
                android:layout_width="220dp"
                android:layout_height="wrap_content"
                android:text="@string/price"
                android:textColor="@color/darkgrey"
                android:textSize="15sp"
                android:textStyle="bold"/>

        <EditText
                android:id="@+id/txtQuantityProductToAddToCart"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPersonName"
                android:text=""
                android:hint="@string/enter_quantity"
                android:textColor="@color/darkgrey"
                android:textStyle="bold"/>

    </LinearLayout>

    <Button
            android:id="@+id/btnAddProductToCart"
            android:layout_width="0dp"
            android:layout_height="75dp"
            android:layout_weight="1"
            android:layout_gravity="center_vertical"
            android:text="@string/add_to_cart"
            android:textColor="@color/black"
            android:textSize="17sp"
            android:textStyle="bold"/>

</LinearLayout>