<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                                   xmlns:app="http://schemas.android.com/apk/res-auto"
                                                   android:layout_width="match_parent"
                                                   android:layout_height="match_parent">

    <TextView
            android:text="@string/back_to_login"
            android:textAlignment="center"
            android:textSize="20sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/txtBackToLogin"
            app:layout_constraintTop_toBottomOf="@+id/btnResetPassword"
            android:layout_marginTop="40dp" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"/>
    <ImageView
            android:layout_width="293dp"
            android:layout_height="124dp" app:srcCompat="@drawable/a" android:id="@+id/imageView6"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginTop="32dp"
    />
    <TextView
            android:text="@string/forget_password"
            android:textAlignment="center"
            android:textSize="20sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/textView6"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView6" android:layout_marginTop="32dp"/>
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:hint="@string/username"
            android:ems="10"
            android:id="@+id/txtUsernameForgetField"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView6" android:layout_marginTop="32dp"
            app:layout_constraintHorizontal_bias="0.497"/>
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:hint="@string/password"
            android:ems="10"
            android:id="@+id/txtNewPassword"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtUsernameForgetField" android:layout_marginTop="24dp"
            app:layout_constraintHorizontal_bias="0.497"/>
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:hint="@string/confirm_password"
            android:ems="10"
            android:id="@+id/txtConfirmNewPassword"
            app:layout_constraintTop_toBottomOf="@+id/txtNewPassword"
            android:layout_marginTop="24dp" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintHorizontal_bias="0.497"/>
    <Button
            android:text="@string/reset_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/btnResetPassword"
            app:layout_constraintTop_toBottomOf="@+id/txtConfirmNewPassword" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginTop="32dp"
            app:layout_constraintHorizontal_bias="0.497"/>


</androidx.constraintlayout.widget.ConstraintLayout>