<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="horizontal" android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:layout_marginRight="14dp"
              android:layout_marginLeft="14dp"
              android:padding="5dp">

    <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="center_vertical">

        <TextView
                android:id="@+id/txtProductNameHistory"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:text="@string/product_name"
                android:textColor="@color/black"
                android:textSize="17sp"
                android:textStyle="bold"/>

        <TextView
                android:id="@+id/txtProductPriceHistory"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:text="@string/price"
                android:textColor="@color/darkgrey"
                android:textSize="15sp"
                android:textStyle="bold"/>

        <TextView
                android:id="@+id/txtProductQuantityHistory"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:text="@string/quantity"
                android:textColor="@color/darkgrey"
                android:textSize="15sp"
                android:textStyle="bold"/>

    </LinearLayout>

</LinearLayout>