<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".Category">

    <ImageView
            android:layout_width="196dp"
            android:layout_height="98dp" app:srcCompat="@drawable/a"
            android:id="@+id/imageView3"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="16dp" app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="24dp"/>
    <TextView
            android:text="@string/available_categories"
            android:textSize="18sp"
            android:textAlignment="center"
            android:layout_width="177dp"
            android:layout_height="26dp" android:id="@+id/textView2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@+id/btnSearch"
            android:layout_marginTop="12dp"/>
    <ListView
            android:id="@+id/list_category"
            android:layout_width="348dp"
            android:layout_height="377dp"
            android:layout_weight="1"
            app:layout_constraintTop_toBottomOf="@+id/textView2"
            android:layout_marginTop="24dp" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintHorizontal_bias="0.492"/>
    <TextView
            android:text="@string/welcome_to_our_shop"
            android:layout_width="167dp"
            android:textSize="17sp"
            android:layout_height="55dp" android:id="@+id/textView3"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="48dp" android:layout_marginEnd="24dp"
            app:layout_constraintStart_toEndOf="@+id/imageView3" app:layout_constraintHorizontal_bias="1.0"/>
    <Button
            android:text="@string/search"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/btnSearch"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtSearchText" android:layout_marginTop="12dp"
            app:layout_constraintHorizontal_bias="0.498"/>
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:hint="@string/search"
            android:ems="10"
            android:id="@+id/txtSearchText"
            app:layout_constraintTop_toBottomOf="@+id/imageView3"
            android:layout_marginTop="20dp" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"/>
</androidx.constraintlayout.widget.ConstraintLayout>